--- a/login.html
+++ b/login.html
@@ -46,6 +46,7 @@
                 <a href="#" style="color:#b54037; font-style:italic;font-weight:normal;">Forgot your password?</a>
                 <br>
                 <br>
+                <a href="register.html" style="color:#b54037; font-style:italic;font-weight:normal;">Sign up</a>
                 <br>
                 <br>
                 <a href="#" style="color:#b54037; font-style:italic;font-weight:normal;">Sign in as another user?</a>
