--- a/mood.html
+++ b/mood.html
@@ -57,9 +57,9 @@
             </ul>
         </div>
             
-        <div data-role="header" data-position="fixed" data-theme='a' data-position="inline">
+        <div data-role="header" data-position="fixed" data-theme='a'>
             <a href="#settingsPanel" data-role='button' data-inline='true'><i class='fa fa-bars'></i></a>
-            <h1>WHAT ARE YOU IN THE MOOD FOR?</h1>
+            <h1 style="text-align:left;">WHAT ARE YOU IN THE MOOD FOR?</h1>
             <a href="#myTablesPanel" data-role='button' data-inline='true'><i class="fa fa-cog"></i></a>
         </div>
         <div data-role="main" class="ui-content" style="text-align: center;padding:0em">
