--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 
             <div data-role="main" class="ui-content" style="text-align: center;padding:0em">
                 <div id="activity" class="ui-grid-b ui-responsive">
-                    <div class="ui-block-a"><button data-theme="e"><i class='fa fa-file-image-o fa-3x'></i></button></div>
+                    <div class="ui-block-a"><button data-theme="e"><i class='fa fa-file-image-o fa-3x pull-left'></i><p style="color:#b54037; font-style:normal;font-weight:normal;">UPLOAD</p></button></div>
                     <div class="ui-block-b"><button data-theme="d"><i class='fa fa-twitter fa-3x'></i></button></div>
                     <div class="ui-block-c"><button><i class='fa fa-facebook fa-3x'></i></button></div>     
                 </div>
