--- a/mood.html
+++ b/mood.html
@@ -152,9 +152,9 @@
             </div>
             <div data-role="main" class="ui-content" style="text-align: center;padding:0em">
                 <div id="activity" class="ui-grid-b ui-responsive">
-                    <div class="ui-block-a"><button><i class='fa fa-coffee fa-3x'></i></button></div>
-                    <div class="ui-block-b"><button><i class='fa fa-glass fa-3x'></i></button></div>
-                    <div class="ui-block-c"><button><i class='fa fa-spoon fa-3x'></i><i class='fa fa-spoon fa-3x'></i></button></div>     
+                    <div class="ui-block-a"><button id="coffeeActivity"><i class='fa fa-coffee fa-3x'></i></button></div>
+                    <div class="ui-block-b"><button id="drinksActivity"><i class='fa fa-glass fa-3x'></i></button></div>
+                    <div class="ui-block-c"><button id="foodActivity"><i class='fa fa-spoon fa-3x'></i><i class='fa fa-spoon fa-3x'></i></button></div>     
                 </div>
                 <br>
                 <ul data-role="listview" data-inset="false" data-divider-theme="b">
