Changes for search results - added parameter for radius, fixed findyourpeople.html to show results. Currently showing in a list but not in slider.

--- a/mood.html
+++ b/mood.html
@@ -187,19 +187,19 @@
                     <div name="select-choice-3" id="select-choice-3b" data-theme="d" data-role="collapsible" data-collapsed="true" data-corners="false" data-iconpos="right">
                         <h4>WHERE?</h4>
                         <ul data-role="listview" data-theme="d">
-                            <li id="where1" value="WITHIN 5 BLOCKS"><a href="#">WITHIN 5 BLOCKS</a></li>
-                            <li id="where2" value="IN 10 BLOCKS"><a href="#">IN 10 BLOCKS</a></li>
-                            <li id="where3" value="WITHIN 1 MILE"><a href="#">WITHIN 1 MILE</a></li>
-                            <li id="where4" value="I'M FLEXIBLE"><a href="#">I'M FLEXIBLE</a></li>
+                            <li id="where1" value="450"><a href="#">WITHIN 5 BLOCKS</a></li>
+                            <li id="where2" value="900"><a href="#">IN 10 BLOCKS</a></li>
+                            <li id="where3" value="1610"><a href="#">WITHIN 1 MILE</a></li>
+                            <li id="where4" value="81000"><a href="#">I'M FLEXIBLE</a></li>
                         </ul>
                     </div>
                 </li>
 
-                <p><i class="fa fa-quote-left fa-2x fa-border"></i>&nbsp; Place for autocomplete google maps search box..........</p>
-                <br>
-                <button id='findMyPeopleButton' data-inline='true'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIND MY PEOPLE</button>
+<!--                <p><i class="fa fa-quote-left fa-2x fa-border"></i>&nbsp; Place for autocomplete google maps search box..........</p>-->
+<!--                <br>-->
                 </ul>
-                                    
+             <button id='findMyPeopleButton' data-inline='true'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIND MY PEOPLE</button>
+               
             </div>
         </div>
     </body>
