--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
 		<!-- jQuery / jQueryMobile Scripts -->
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
         <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
+        <script src="js/login.js"></script> 
         
     </head>
     
@@ -35,11 +36,11 @@
             <hr style="border: 0;height: 1px;width: 50%;background: #333;background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);background-image:      -o-linear-gradient(left, #ccc, #333, #ccc); ">
             <br>   
             <div data-role="fieldcontain" class="ui-responsive">
-                <input type="text" name="Email" id="Email" value="" placeholder="&nbsp;&nbsp;Email" style="border:1px solid #b54037;font-style:italic;"/>
+                <input type="text" name="userid" id="userid" value="" placeholder="&nbsp;&nbsp;UserID" style="border:1px solid #b54037;font-style:italic;"/>
             </div>
             <div id="passwordGrid" class="ui-grid-a ui-responsive">
-                <div class="ui-block-a"><input type="password" name="Password" id="Password" value="" placeholder="&nbsp;&nbsp;Password" style="border:1px solid #b54037;font-style:italic;"/></div>
-                <div class="ui-block-b"><button data-theme="a"><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>
+                <div class="ui-block-a"><input type="password" name="password" id="password" value="" placeholder="&nbsp;&nbsp;Password" style="border:1px solid #b54037;font-style:italic;"/></div>
+                <div class="ui-block-b"><button data-theme="a" id="continueButton"><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>
             </div>
             <br>
             <div id="loginPageLinks" class="ui-responsive" style="text-align: center;padding:0em">
