--- a/mood.html
+++ b/mood.html
@@ -199,7 +199,11 @@
 <!--                <br>-->
                 </ul>
              <button id='findMyPeopleButton' data-inline='true'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIND MY PEOPLE</button>
-               
+                
+             <div id="loginButtons" class="ui-grid-a ui-responsive" >    
+                 <div class="ui-block-a"><button id='loginButton'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; SIGN IN</button></div>
+                 <div class="ui-block-b"><button id='registerButton'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIRST TIME</button></div>    
+             </div>
             </div>
         </div>
     </body>
