confirmInvitations page changes

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -52,6 +52,8 @@
                     </li>  
                   </ul>-->
                 </div>
+                <button id='sendInvitesButton' data-inline='true'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; Send Invites</button>
+
                 
             </div>
         </div>
