registration fixes for calling credentialservice post service for registration

--- a/register.html
+++ b/register.html
@@ -63,7 +63,7 @@
                                 
                             </div>
                         <div class="ui-grid-solo">
-                            <div class="ui-block-a"><button><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>    
+                            <div class="ui-block-a"><button id='submitRegistrationButton'><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>    
                         </div>
                         </form>
                 </div>
