--- a/mood.html
+++ b/mood.html
@@ -223,11 +223,11 @@
                 </ul>
                 
                 <br>
-             <button id='findMyPeopleButton' data-inline='true'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIND MY PEOPLE</button>
+             <button id='findMyPeopleButton' data-inline='true'>&nbsp; FIND MY PEOPLE</button>
                 
              <div id="loginButtons" class="ui-grid-a ui-responsive" >    
-                 <div class="ui-block-a"><button id='loginButton'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; SIGN IN</button></div>
-                 <div class="ui-block-b"><button id='registerButton'><i class='fa fa-spinner fa-spin pull-left'></i>&nbsp; FIRST TIME</button></div>    
+                 <div class="ui-block-a"><button id='loginButton'>&nbsp; SIGN IN</button></div>
+                 <div class="ui-block-b"><button id='registerButton'>&nbsp; FIRST TIME</button></div>    
              </div>
             </div>
         </div>
