--- a/register.html
+++ b/register.html
@@ -33,7 +33,8 @@
                         <h3 class="ui-title">You have successfully registered with TableTribes</h3>
                     <p>A link has been sent to your registered email id. Please confirm that link within 24 hours to verify your email id.</p>
                     <p>Please confirm your email address and login to TableTribes to "Find your People".</p>    
-                    <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back" data-transition="flow" id="redirectButton">Go Back</a>
+                    <!--<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back" data-transition="flow" id="redirectButton">Go Back</a>-->
+                    <div class="ui-block-a"><button id='redirectButton'><i class='fa fa-chevron-right fa-1x pull-right'></i>Go Back</button></div>    
                     </div>
                 </div>
                 
