--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -29,7 +29,7 @@
                 <h1>FIND YOUR PEOPLE</h1>
             </div>   
 
-            <div data-role="main" class="ui-content" style="text-align: center;padding:0em">
+            <div data-role="main" class="ui-content" style="text-align: center;padding:0em" id="main">
 
                 <div class="flexslider">
 
