--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -16,6 +16,7 @@
 		<!-- jQuery / jQueryMobile Scripts -->
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
         <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.flexslider-min.js"></script>
         <script src="js/confirmInvitations.js"></script>
     </head>
