login and registration fixes

--- a/login.html
+++ b/login.html
@@ -42,10 +42,14 @@
             </div>
             <div id="passwordGrid" class="ui-grid-a ui-responsive">
                 <div class="ui-block-a"><input type="password" name="password" id="password" value="" placeholder="&nbsp;&nbsp;Password" style="border:1px solid #b54037;font-style:italic;"/></div>
-                <div class="ui-block-b"><button data-theme="a" id="continueButton"><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>
+                <div class="ui-block-b"><button data-theme="a" id="continueButton"><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div> <br>
+                <div class="ui-block-b"><button data-theme="a" id="registerButton"><i class='fa fa-chevron-right fa-1x pull-right'></i>SIGN UP</button></div>
+                <div class="ui-block-b"><button data-theme="a" id="forgotPwdButton"><i class='fa fa-chevron-right fa-1x pull-right'></i>FORGOT PASSWORD</button></div>
+
             </div>
+            
             <br>
-            <div id="loginPageLinks" class="ui-responsive" style="text-align: center;padding:0em">
+<!--            <div id="loginPageLinks" class="ui-responsive" style="text-align: center;padding:0em">
                 <a href="#" style="color:#b54037; font-style:italic;font-weight:normal;">Forgot your password?</a>
                 <br>
                 <br>
@@ -53,7 +57,7 @@
                 <br>
                 <br>
                 <a href="#" style="color:#b54037; font-style:italic;font-weight:normal;">Sign in as another user?</a>
-            </div>    
+            </div>    -->
         </div>    
     </body>
 </html>
