--- a/register.html
+++ b/register.html
@@ -82,6 +82,10 @@
                             </div>
                             
                            </form> 
+                        <form name="addUserTagForm" id="addUserTagForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/addUserTag">  
+                            <input type="hidden" name="userid" id="userid">
+                            <input type="hidden" name="tag" id="tag">
+                        </form>
                         <div class="ui-grid-solo">
                             <div class="ui-block-a"><button id='submitRegistrationButton'><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>    
                         </div>
