--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 
-                <p>Connect with Facebook or Twitter to easily fill out your profile.</p>
+                <p>Feeling lazy? Join with Facebook or Twitter (We promise we won't post anything)</p>
                 <div id="activity" class="ui-grid-a ui-responsive">
                     <div class="ui-block-a"><button data-theme="d"><i class='fa fa-twitter fa-3x'></i></button></div>
                     <div class="ui-block-b"><button><i class='fa fa-facebook fa-3x'></i></button></div>     
