--- a/register.html
+++ b/register.html
@@ -20,7 +20,9 @@
         <script src="js/jquery.tinycarousel.min.js"></script>
         <script src="js/mobileJquery.js"></script>
         <script src="js/jquery.uploadfile.min.js"></script>
+         <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 
+    
         <script src="js/register.js"></script> 
         
     </head>
