--- a/mood.html
+++ b/mood.html
@@ -235,7 +235,11 @@
                 
                 <br>
              <button id='findMyPeopleButton' data-inline='true'>&nbsp; FIND MY PEOPLE</button>
-                
+             <form name="updateUserLiveLocationForm" id="updateUserLiveLocationForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/updateLiveLocation">  
+                   <input type="hidden" name="userID" id="userID">
+                   <input type="hidden" name="latitude" id="latitude">
+                   <input type="hidden" name="longitude" id="longitude">                   
+             </form>   
              <div id="loginButtons" class="ui-grid-a ui-responsive" >    
                  <div class="ui-block-a"><button id='loginButton'>&nbsp; SIGN IN</button></div>
                  <div class="ui-block-b"><button id='registerButton'>&nbsp; FIRST TIME</button></div>    
