--- a/register.html
+++ b/register.html
@@ -76,7 +76,7 @@
                             <input type="text" name="lastName" id="lastName" value="" placeholder="LAST NAME" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="text" name="homeTown" id="homeTown" value="" placeholder="LOCATION" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="date" name="dateOfBirth" id="dateOfBirth" value="" placeholder="DATE OF BIRTH" style="border:1px solid #b54037;" data-corners='false'/>
-                            <input type="text" name="email" id="email" value="" placeholder="EMAIL" style="border:1px solid #b54037;" data-corners='false'/>
+                            <input type="text" name="email" id="email" placeholder="EMAIL" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="password" name="password" id="password" value="" placeholder="PASSWORD" style="border:1px solid #b54037;" data-corners='false'/>
                             <div id="activity" class="ui-grid-a ui-responsive">
                                 <div class="ui-block-a"><textarea  rows="400" cols="50" name="bio" id="bio" placeholder="BIO" style="border:1px solid #b54037;" data-corners='false'></textarea></div>
