--- a/register.html
+++ b/register.html
@@ -18,7 +18,6 @@
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
         <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
         <script src="js/jquery.tinycarousel.min.js"></script>
-        <script src="js/mobileJquery.js"></script>
         <script src="js/jquery.uploadfile.min.js"></script>
          <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 
@@ -78,6 +77,8 @@
                             <input type="date" name="dateOfBirth" id="dateOfBirth" value="" placeholder="DATE OF BIRTH" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="text" name="email" id="email" placeholder="EMAIL" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="password" name="password" id="password" value="" placeholder="PASSWORD" style="border:1px solid #b54037;" data-corners='false'/>
+                            <input type="password" name="ConfirmPassword" id="ConfirmPassword" value="" placeholder="VERIFY PASSWORD" style="border:1px solid #b54037;" data-corners='false'/>
+                           
                             <div id="activity" class="ui-grid-a ui-responsive">
                                 <div class="ui-block-aa"><textarea  rows="400" cols="50" name="bio" id="bio" placeholder="BIO" style="border:1px solid #b54037;" data-corners='false'></textarea></div>
                                 
