--- a/register.html
+++ b/register.html
@@ -18,10 +18,11 @@
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script> 
         <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
         <script src="js/jquery.tinycarousel.min.js"></script>
-        <script src="js/mobileJquery.js"></script>
+        <!--<script src="js/mobileJquery.js"></script>-->
         <script src="js/jquery.uploadfile.min.js"></script>
          <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script>
 
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
     
         <script src="js/register.js"></script> 
 
@@ -74,7 +75,8 @@
 
                             <input type="text" name="firstName" id="firstName" value="" placeholder="FIRST NAME" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="text" name="lastName" id="lastName" value="" placeholder="LAST NAME" style="border:1px solid #b54037;" data-corners='false'/>
-                            <input type="text" name="homeTown" id="homeTown" value="" placeholder="LOCATION" style="border:1px solid #b54037;" data-corners='false'/>
+                            <!--<input type="text" name="homeTown" id="homeTown" value="" placeholder="LOCATION" style="border:1px solid #b54037;" data-corners='false'/>-->
+                            <input type="search" id="homeTown" placeholder="HOME LOCATION" style="border:1px solid #b54037;" data-corners='false'/>    
                             <input type="date" name="dateOfBirth" id="dateOfBirth" value="" placeholder="DATE OF BIRTH" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="text" name="email" id="email" placeholder="EMAIL" style="border:1px solid #b54037;" data-corners='false'/>
                             <input type="password" name="password" id="password" value="" placeholder="PASSWORD" style="border:1px solid #b54037;" data-corners='false'/>
@@ -88,10 +90,10 @@
                             <div class="ui-block-a"><button id='submitRegistrationButton'><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>    
                         </div>
                         </form>
-                    <form name="addUserTagForm" id="addUserTagForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/addUserTag">  
+<!--                    <form name="addUserTagForm" id="addUserTagForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/addUserTag">  
                             <input type="hidden" name="userid" id="userid">
                             <input type="hidden" name="tag" id="tag">
-                        </form>
+                        </form>-->
                 </div>
             </div>    
         </div> 
