--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             <hr style="border: 0;height: 1px;width: 50%;background: #333;background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);background-image:      -o-linear-gradient(left, #ccc, #333, #ccc); ">
             <br>   
             <div data-role="fieldcontain" class="ui-responsive">
-                <input type="text" name="userid" id="userid" value="" placeholder="&nbsp;&nbsp;UserID" style="border:1px solid #b54037;font-style:italic;"/>
+                <input type="text" name="userid" id="userid" value="" placeholder="&nbsp;&nbsp;Email" style="border:1px solid #b54037;font-style:italic;"/>
             </div>
             <div id="passwordGrid" class="ui-grid-a ui-responsive">
                 <div class="ui-block-a"><input type="password" name="password" id="password" value="" placeholder="&nbsp;&nbsp;Password" style="border:1px solid #b54037;font-style:italic;"/></div>
