Confirm Invitations UI Updates - WIP - Round 2

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -33,12 +33,12 @@ border-width: 0;
 overflow: visible;
 overflow-x: hidden;
 padding: 0em;
-height: 100%
+min-height: 568px;
 ">
         </div>
             <!--iframe name="hiddenFrame1" id = "hiddenFrame1" class="hide"></iframe-->  
 
-        <form name="confirmInviteForm" id="confirmInviteForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/updateInvitation" target="hiddenFrame1">  
+        <!--form name="confirmInviteForm" id="confirmInviteForm" method="post" action="http://vast-scrubland-7419.herokuapp.com/credentialService/updateInvitation" target="hiddenFrame1">  
 
                 <input type="hidden" name="username_from" id="username_from">
                 <input type="hidden" name="latitude_invite" id="latitude_invite">
@@ -47,11 +47,13 @@ height: 100%
                 <input type="hidden" name="username_to" id="username_to">
                 <input type="hidden" name="activity" id="activity">
 
-        </form>
-        <div>
+        </form-->
+
+            
+        <!--div>
 
             <button id='confirmInvitesButton' data-inline='true'>Send Invites</button>
-        </div>
+        </div-->
 
     </div>
   </div>
