--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -19,6 +19,8 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.flexslider-min.js"></script>
         <script src="js/confirmInvitations.js"></script>
+        <script src="js/jquery.session.js"></script>
+
     </head>
     <body  style = "height:100%">
         <!-- Selected user for invite -->
