findyourpeople changes integration with confirminvites page...

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -61,6 +61,9 @@
                                 <nav>
 					<a href="#" id="showInfo" class="icon-info" data-info="Details about this person">Details about this person</a>
 					<a href="#" id="changeSlide" class="icon-next-slide" data-info="Next Person">Next Person</a>
+                                        <a href="#" id="confirmInvitation" class="icon-next-slide" data-info="Confirm Invitation">Confirm Invitation</a>
+
+                                        
 				</nav>
                                 </div>
 			<div class="main">
