changes for parameters like inviteTime to be passed from mood page

--- a/mood.html
+++ b/mood.html
@@ -226,10 +226,10 @@
                     <div name="select-choice-2" id="select-choice-2b" data-theme="c" data-role="collapsible" data-collapsed="true" data-corners="false" data-iconpos="right">
                         <h4>WHEN?</h4>
                         <ul data-role="listview" data-theme="c" >
-                            <li id="when1" value="WITHIN 20 MINUTES"><a href="#">WITHIN 20 MINUTES</a></li>
-                            <li id="when2" value="IN 1 HOUR"><a href="#">IN 1 HOUR</a></li>
-                            <li id="when3" value="IN 2 HOURS"><a href="#">IN 2 HOURS</a></li>
-                            <li id="when4" value="I'M FLEXIBLE"><a href="#">I'M FLEXIBLE</a></li>
+                            <li id="when1" value="20"><a href="#">WITHIN 20 MINUTES</a></li>
+                            <li id="when2" value="60"><a href="#">IN 1 HOUR</a></li>
+                            <li id="when3" value="120"><a href="#">IN 2 HOURS</a></li>
+                            <li id="when4" value="0"><a href="#">I'M FLEXIBLE</a></li>
                         </ul>
                     </div>
 
