--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
        <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
      
-       <link rel="stylesheet" type="text/css" href="css/register_1.css">
+       <link rel="stylesheet" type="text/css" href="css/register.css">
   </head>
 
 <body>
