mood.html complete + sulagna changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         
-        <script src="js/mood.js"></script>
+        <script src="js/mood_old.js"></script>
         <script src="js/jquery.session.js"></script>
 
     </head>
