UI fixes in mood, register and login pages

--- a/login.html
+++ b/login.html
@@ -28,13 +28,13 @@
 
 
 
- <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
+ <div role="main" class="ui-content jqm-content jqm-fullwidth" style="margin-top:20px;"> <!-- Important-->
 
 
 
            <label for="userid" class="ui-hidden-accessible">Email</label>
            <input name="userid" id="userid" placeholder="Email" value="" type="text">
-
+           <br>
            <label for="password" class="ui-hidden-accessible">Password</label>
            <input name="password" id="password" placeholder="Password" value="" type="password">
 
@@ -43,7 +43,7 @@
        <div style="text-align:center">
               <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; margin-top:10px;" >CONTINUE</a>
           </div>
-
+           
       <div  style="text-align:center">
               <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; margin-top:10px;" >REGISTER</a>
           </div>     
