--- a/mood.html
+++ b/mood.html
@@ -143,7 +143,7 @@
                 <ul data-role="listview">
                     <li data-icon="logoicon"><a id="myTable" href="#" data-rel="close">MY TABLES</a></li>
 
-                    <li data-icon="bell"><a id="invites" href="">Pending Invitations<span class="span class="ui-li-count" style="color:#b42327;">0</span></a></li>
+                    <li data-icon="bell"><a id="invites" href="">Pending Invitations<span class="ui-li-count" style="color:#b42723;">0</span></a></li>
 
 
                 </ul>
