--- a/mood.html
+++ b/mood.html
@@ -28,8 +28,8 @@
                 <h3>WHAT ARE YOU IN THE MOOD FOR?</h3>
 
                 <!-- This is the  to initiate side panels-->
-                <a href="#nav-panel" data-icon="mygear"  class="ios app-theme-none notext" data-iconpos="notext" style="background:#b42723;">Menu</a>
-                <a href="#add-form" data-icon="dot" data-iconpos="notext"  style="background:#b42723">Add</a>
+                <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#b42723;">Menu</a>
+                <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#b42723">Add</a>
             </div><!-- /header -->
 
 
@@ -141,7 +141,8 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="logoicon"><a id="myTable" href="#" data-rel="close">MY TABLES</a></li>
+                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
+                    <li data-icon="logoicon"><a id="myTable" href="#">MY TABLES</a></li>
 
                     <li data-icon="bell"><a id="invites" href="">Pending Invitations<span class="ui-li-count" style="color:#b42723;">0</span></a></li>
 
