--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -64,7 +64,7 @@
                </div>
 
                <div id="activityDetails" style="background-color:#333333">
-                     <p class="preferredLocation" style="font-size:14px;">IN 20 MINTUES</p>
+                     <p class="preferredLocation" style="font-size:14px;">IN 20 MINUTES</p>
                      <p class="preferredActivity" style="font-size:14px;">UP TO 0.5 MILES</p>
                      <div style="clear: both;"></div>
                </div>
