--- a/mood.html
+++ b/mood.html
@@ -13,6 +13,7 @@
 
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
+        <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/mood.js"></script>
         
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
@@ -142,9 +143,11 @@
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
                     <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
-                    <li data-icon="logoicon"><a id="myTable" href="#">MY TABLES</a></li>
-
-                    <li data-icon="bell"><a id="invites" href="">Pending Invitations<span class="ui-li-count" style="color:#b42723;">0</span></a></li>
+                    <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
+                    <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
+                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
+                    <li onclick="login()" class="loggedOutFields" data-icon="bell"><a href="">Login</a></li>
+                    <li onclick="logout()" class="loggedInFields" data-icon="bell"><a href="">Logout</a></li>
 
 
                 </ul>
