UI updates- confirmInvitations, findyourpeople and other fixes

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -37,16 +37,16 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
 
-                <div class="ui-grid-b" id="Names" style="background-color:#ffbb00; height:30px; width:100%;">
+                <div class="ui-grid-b" id="Names" style="background-color:#ffbb00; height:30px; width:100%; padding-top:10px;">
                    <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:95px; border:none;"></div></div>
                    <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:95px; background-color:transparent; border:none; color:#ffffff; text-shadow:none;">ERIC</div></div>
                    <div class="ui-block-c"><div class="ui-bar ui-bar-a" style="height:95px; background-color:transparent; border:none; color:#ffffff; text-shadow:none;">VAIBHAV</div></div>
                 </div><!-- /grid-b -->
 
                <div class="ui-grid-b" >
-                   <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/findpplicon.png" style="height:105px;"></div></div>
-                   <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic1.png" style="height:105px;"></div></div>
-                   <div class="ui-block-c"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic2.png" style="height:105px;"></div></div>
+                   <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/findpplicon.png" style="height:105px;"><img class="close"></div></div>
+                   <div class="ui-block-b"><div class="ui-bar ui-bar-a" id="confirmprofileImg" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic1.png" style="height:105px;"><img class="close" src="images/smallcloseicon.png" /></div></div>
+                   <div class="ui-block-c"><div class="ui-bar ui-bar-a" id="confirmprofileImg" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic2.png" style="height:105px;"><img class="close" src="images/smallcloseicon.png" /></div></div>
             </div><!-- /grid-b -->
 
             <div id="activityDetails" style="background-color:#444444;">
