--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -44,7 +44,7 @@
                 </div><!-- /grid-b -->
 
                <div class="ui-grid-b" >
-                   <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/findpplicon.png" style="height:105px;"><img class="close"></div></div>
+                   <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/findpplicon.png" style="height:105px;"></div></div>
                    <div class="ui-block-b"><div class="ui-bar ui-bar-a" id="confirmprofileImg" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic1.png" style="height:105px;"><img class="close" src="images/smallcloseicon.png" /></div></div>
                    <div class="ui-block-c"><div class="ui-bar ui-bar-a" id="confirmprofileImg" style="height:100px; text-align:center; background-color:#ffffff;"><img src="images/pic2.png" style="height:105px;"><img class="close" src="images/smallcloseicon.png" /></div></div>
             </div><!-- /grid-b -->
