--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -19,6 +19,7 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/findYourPeople.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/findYourPeopleipad.css">
     </head>
 
     <body>
@@ -54,7 +55,7 @@
                    <div style="overflow-y:scroll; height:100px;"> <h4 id="bioText"></h4></div>
                 </div>
                 
-                <div class="ui-grid-c tags" style="background-color:#88ccc1; height:40px">
+                <div class="ui-grid-c" style="background-color:#88ccc1; height:60px">
                   <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:60px; text-align:center;">tag1</div></div>
                   <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:60px; text-align:center;">tag2</div></div>
                   <div class="ui-block-c"><div class="ui-bar ui-bar-a" style="height:60px; text-align:center;">tag3</div></div>
@@ -64,14 +65,14 @@
 
 
                <div id="BIO" style="background-color:#b42723">
-                     <p id="location" class="preferredLocation" style="font-size:14px;"></p>
-                     <p id="activity" class="preferredActivity" style="font-size:14px;"></p>
+                     <p id="location" class="preferredLocation"></p>
+                     <p id="activity" class="preferredActivity"></p>
                      <div style="clear: both;"></div>
                </div>
 
                <div id="activityDetails" style="background-color:#aaaaaa">
-                     <p id="time" class="preferredLocation" style="font-size:14px;"></p>
-                     <p id="radius" class="preferredActivity" style="font-size:14px;"></p>
+                     <p id="time" class="preferredLocation"></p>
+                     <p id="radius" class="preferredActivity"></p>
                      <div style="clear: both;"></div>
                </div>
 
