--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
         <script src="js/login.js"></script> 
         
         <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/loginipad.css">
     </head>
 
     <body>
