--- a/mood.html
+++ b/mood.html
@@ -19,6 +19,7 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/mood_1.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/moodipad.css">
     </head>
 
     <body>
