--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" type="text/css" href="css/register.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/registeripad.css">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
 
 
