--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -36,7 +36,7 @@
 
 
 
-            <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
+            <div id="imageDiv" role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
                 
                <div data-role="controlgroup" data-type="horizontal" style="text-align:center;">
 
